# Caption_Your_Video

./: README.md  logger.py  logging.conf  pyproject.toml
apps/frontend/: UI.py
apps/server/: __init__.py  api.py
src/caption_generator/: __init__.py  extract_audio.py  main.py
src/caption_generator/core/: __init__.py  video_trascriber.py
src/caption_generator/llm/: __init__.py  generator.py  llm_client.py  prompts.py
