[project]
name = "caption-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "koshishshresthaa", email = "koshishshrestha74@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "moviepy>=2.1.2",
    "openai-whisper>=20240930",
    "whisperx>=3.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
